# personagens_harry_potter

./: .gitignore  ARCHIVED.md  CLAUDE.md  Dockerfile  LICENSE  README.html  README.md  get_data.ipynb  get_data.py  get_data_async.py  get_data_multiprocessing.py  get_data_multithread.py  href_personagens.txt  links_personagens.txt  personagens.csv  pyproject.toml  requirements.txt  run_scraper.py  webscrap.qmd
data/: .gitkeep
src/: __init__.py
src/scrapers/: __init__.py  __main__.py  base.py  wiki_caller_async.py  wiki_caller_multiprocessing.py  wiki_caller_sync.py
tests/: __init__.py  conftest.py  test_wiki_caller.py
